# auto_python

./: .gitignore  pyproject.toml
src/base_class/: response.py
src/enums/: global_emuns.py
src/pydantic_schemas/: post.py
src/scheme/: post.py
tests/: test_requests.py
